--- a/stil.css
+++ b/stil.css
@@ -105,7 +105,7 @@ clear: both;
 	text-align: center;
 }
 
-#vijesti
+.vijesti
 {
 background-image: url("Prag.jpg");
 	background-repeat:no-repeat;
@@ -114,7 +114,7 @@ background-image: url("Prag.jpg");
 
 
 }
-#nas1
+.naslov
 {
 
 	font-weight: bold;
@@ -125,7 +125,7 @@ background-image: url("Prag.jpg");
 	 font-family: 'Hind';
 }
  
-#aut1
+.autor
  { margin-top: -20px;
    color: #989898;
    font-size: 15px;
@@ -134,7 +134,7 @@ background-image: url("Prag.jpg");
 
  }
 
-#vijest1
+.opis
 {
     width:25%;
 	text-align: justify;
