--- a/stil.css
+++ b/stil.css
@@ -382,10 +382,10 @@ ul li
 
 .submit
 {   font-size: 15px;
-   margin-left: 50px;
+   margin-left: 200px;
    font-family: 'Hind';
    margin-top: 0px;
-   float: right;
+ /*  float: right;*/
    margin-right: 100px;
 }
 #mail
@@ -439,8 +439,8 @@ font-family: 'Hind';
 
 #forma2
 {
-	float: right;
-	margin-top: -280px;
+	/*float: right;
+	margin-top: -280px;*/
 font-family: 'Hind';
 }
 .formaPrijava
@@ -488,7 +488,7 @@ font-family: 'Hind';
 {
 	margin-left:0px;
 	border: 2px solid #FF6633;
-	margin-top:80px;
+	margin-top:100px;
 	height: 150px;
 	margin-left: 200px;
 	width: 900px;
@@ -538,4 +538,16 @@ font-size: 12pt;
 	font-weight: bold;
      margin-left: 620px;
  font-family: 'Hind';
+}
+
+#button
+{float: left;}
+
+#zatvori a
+{
+	font-family: 'Hind';
+	font-size: 15pt;
+	color: orange;
+	float: right;
+
 }
