--- a/stil.css
+++ b/stil.css
@@ -5,6 +5,7 @@ body
 {
 
 	background-color: #FFFFFF;
+	
 }
 
 h1
@@ -345,7 +346,14 @@ ul li
   font-size: 20px;
   margin-left: 50px;
 
+
 }
+
+#listaVodica
+{
+	display: none;
+}
+
 #prijaviSe
 {
 	
@@ -487,11 +495,11 @@ font-family: 'Hind';
 .komentari
 {
 	margin-left:0px;
-	border: 2px solid #FF6633;
+	border: 2px solid #FF9900;
 	margin-top:100px;
 	height: 150px;
 	margin-left: 200px;
-	width: 900px;
+	width: 700px;
 }
  a..komAutor:link{
 
@@ -551,3 +559,113 @@ font-size: 12pt;
 	float: right;
 
 }
+
+#predloziPohod
+{
+	font-size: 18pt;
+	font-weight: bold;
+	color:#FF6600;
+	font-family: 'Hind';
+
+}
+
+
+#predloziPohod a
+{  
+	font-size: 12pt;
+	color:#686868 ;
+	font-family: 'Hind';
+
+}
+#formaPrijaviPohod
+{
+      margin-top: -20px;
+	float: right;
+}
+
+#googleMap
+{
+	margin-left: 80px;
+}
+
+#my_form
+{
+
+	border: 2px solid #FF9900;
+	height: 150px;
+	margin-left: 200px;
+	width: 700px;
+
+}
+.ostaviKom
+{
+	margin-left: 200px;
+	font-size: 18pt;
+	font-weight: bold;
+	color:#FF6600;
+	font-family: 'Hind';
+
+}
+
+.ispis
+{
+
+	font-size: 12pt;
+	font-weight: bold;
+	color:#FF6600;
+	font-family: 'Hind';
+
+}
+
+#my_formDodajNovost
+{
+
+	border: 2px solid #FF9900;
+	height: 250px;
+	margin-left: 50px;
+	width: 400px;
+
+}
+
+#my_formObrisiNovost
+{
+
+	border: 2px solid #FF9900;
+	height: 150px;
+	margin-left: 50px;
+	width: 400px;
+
+}
+
+#obrisiKorisnikaForma
+{
+
+	border: 2px solid #FF9900;
+	height: 150px;
+	margin-left: 50px;
+	width: 400px;
+}
+
+
+
+
+#dodajKorisnikaForma
+ {
+border: 2px solid #FF9900;
+	height: 250px;
+	margin-left: 50px;
+	width: 400px;
+ }
+
+
+
+
+ .mailPitanje
+ {
+ 	
+ 	font-size: 12pt;
+	font-weight: bold;
+	color:#FF6600;
+	font-family: 'Hind';
+
+ }
